k3s/ollama.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      volumes:
      - name: persist
        hostPath:
          path: /mnt/data/ai/ollama
          type: Directory
      containers:
      - name: ollama
        image: ollama/ollama
        ports:
        - name: ollama
          containerPort: 11434
        volumeMounts:
        - name: persist
          mountPath: /root/.ollama
          readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ai
spec:
  type: LoadBalancer
  selector:
    app: ollama
  ports:
    - port: 11434
      targetPort: ollama
      name: ollama
