k3s/memos.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: memos
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
  namespace: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
      - name: memos
        image: neosmemo/memos:stable
        args:
          - --port
          - "5230"
        ports:
        - containerPort: 5230
        volumeMounts:
        - name: data
          mountPath: /var/opt/memos
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: memos-data
---
apiVersion: v1
kind: Service
metadata:
  name: memos
  namespace: memos
spec:
  selector:
    app: memos
  ports:
  - port: 5230
    targetPort: 5230
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos
  namespace: memos
  annotations:
    external-dns.alpha.kubernetes.io/hostname: memos.magicloud.lan.
spec:
  rules:
  - host: memos.magicloud.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: memos
            port:
              number: 5230
