k3s/minio-tenant-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-tenant
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-any-console
  namespace: minio-tenant
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "minio.magicloud.lan,.minio.magicloud.lan"
    cert-manager.io/issuer: step-issuer
    cert-manager.io/issuer-kind: StepClusterIssuer
    cert-manager.io/issuer-group: certmanager.step.sm
spec:
  tls:
    - secretName: minio-tls
      hosts:
        - minio.magicloud.lan
        - "*.minio.magicloud.lan"
  rules:
    - host: minio.magicloud.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: any-console
                port:
                  number: 9090
    - host: "*.minio.magicloud.lan"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: any-hl
                port:
                  number: 9000
