k3s/registry.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      volumes:
      - name: persist
        hostPath:
          path: /mnt/data/image-registry
          type: Directory
      containers:
      - name: registry
        image: registry
        ports:
        - name: registry
          containerPort: 5000
        volumeMounts:
        - name: persist
          mountPath: /var/lib/registry/
          readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: registry
spec:
  type: LoadBalancer
  loadBalancerClass: io.cilium/node
  selector:
    app: registry
  ports:
    - port: 5000
      targetPort: registry
      name: registry
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: registry
  annotations:
    external-dns.alpha.kubernetes.io/hostname: registry.magicloud.lan.
    cert-manager.io/issuer: step-issuer
    cert-manager.io/issuer-kind: StepClusterIssuer
    cert-manager.io/issuer-group: certmanager.step.sm
spec:
  rules:
  - host: registry.magicloud.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry
            port:
              number: 5000
  tls:
  - hosts:
      - registry.magicloud.lan
    secretName: registry-tls
---
