k3s/surrealdb-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: custom-request-headers-to-https
  namespace: surrealdb
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http
  namespace: surrealdb
  # annotations:
    # ingress.kubernetes.io/protocol: https
    # traefik.ingress.kubernetes.io/router.middlewares: minio-tenant-strip-prefix-minio@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /surrealdb
            pathType: Prefix
            backend:
              service:
                name: surrealdb-tidb
                port:
                  number: 8000
