k3s/tenant-base.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minio-tenant
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: minio-tenant
  name: strip-prefix-minio
spec:
  stripPrefix:
    forceSlash: true
    prefixes:
      - /minio
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-any-console
  namespace: minio-tenant
  annotations:
    #   ingress.kubernetes.io/protocol: https
    traefik.ingress.kubernetes.io/router.middlewares: minio-tenant-strip-prefix-minio@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /minio
            pathType: Prefix
            backend:
              service:
                name: any-console
                port:
                  number: 9090
